# resume-classifier-api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
app/api/: routes.py
app/db/: mongo.py
app/db/connection_options/: connection.py  mongo_db_configs.py
app/db/repositories/: resumes_repository.py
app/models/: resume.py  resume_schemas.py
app/services/: classifier.py  text_extractor.py  text_extractor_service.py
app/services/AI/: config.py  llm_classifier.py
app/services/ai_agent/: config.py  llm_classifier.py
app/services/text_extractor/: docx.py  factory.py  interface.py  pdf.py  txt.py  utils.py
app/view/: streamlit.py
app/view/pages/: 1_About.py
tests/: test_text_extractor.py
tests/files/: sample.docx  sample.txt
